added paragraph to UI

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <figure>
             <p><img src="humber.jpg" 
             alt="Humber College">
-            <figcaption>The Barrett Center for Technology and Innovation building at Humber College North Campus</figcaption>
+            <figcaption>The Barrett Center for Technology and Innovation building at Humber College North Campus.</figcaption>
         </figure>
 
     </body>
