1st Commit Add Javascript

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>WDDM Project</title>
-        <link rel='stylesheet' href='style.css'>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-    </head>
-    <body>
-        <h1 class="centertext ">Hello World! - Dylan Ravka</h1>
-    <p>
-        This is a paragraph where I will tell you  a little bit about myself.
-    </p>
-    <p class="important">Your paragraph here.</p>
-        <figure>
-            <p><img src="humber.jpg" 
-            alt="Humber College">
-            <figcaption>The Barrett Center for Technology and Innovation building at Humber College North Campus.</figcaption>
-        </figure>
-
-    </body>
+<head>
+    <title>WDDM Project</title>
+    <link rel='stylesheet' href='style.css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script>
+        // JavaScript code goes here
+        function showMessage() {
+            alert("Hello, this is a JavaScript alert!");
+        }
+    </script>
+</head>
+<body>
+<h1 class="centertext" onclick="showMessage()">Hello World! - Dylan Ravka</h1>
+<p>
+    This is a paragraph where I will tell you a little bit about myself.
+</p>
+<p class="important">Your paragraph here.</p>
+<figure>
+    <p><img src="humber.jpg" alt="Humber College">
+    <figcaption>The Barrett Center for Technology and Innovation building at Humber College North Campus.</figcaption>
+</figure>
+</body>
 </html>
