4th Commit Changed Headline.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </script>
 </head>
 <body>
-<h1 class="centertext" onclick="showMessage()">Hello World! - Dylan Ravka</h1>
+<h1 class="centertext" onclick="showMessage()">New Heading - Your Name</h1>
 <p>
     This is a paragraph where I will tell you a little bit about myself.
 </p>
-<p class="important">Your paragraph here.</p>
+<p class="important">New paragraph here.</p>
 <figure>
     <p><img src="humber.jpg" alt="Humber College">
     <figcaption>The Barrett Center for Technology and Innovation building at Humber College North Campus.</figcaption>
